# community_building_manager

./: .env.example  DEPENDENCIES.md  README.md  agents.md  claude.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: asset_types.py  auth.py  dashboard.py  organizations.py  work_items.py
app/core/: __init__.py  dependencies.py  security.py
app/db/: __init__.py  base.py
app/models/: organization.py  user.py  work.py
app/schemas/: auth.py  organization.py  work.py
app/services/: organization_service.py  user_service.py  work_service.py
static/css/: brand.css
static/js/: api.js
templates/: assets.html  base.html  dashboard.html  locations.html  login.html  register.html  settings.html  work-items.html
tests/: conftest.py  test_assets.py  test_auth.py  test_locations.py  test_main.py
